vuelvo a probar nuevas actualizaciones

--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                             <h1 class="acerca-de-mi">Experiencia profesional</h1>
                             <br>
                             <ul class="parrafos">
-                                <h3>Digital House</h3>
+                                <h3>Digital House.</h3>
                                 <li> Desarrollador Web Full Stack JavaScript</li>
                                 <h4>Proyecto Integrador Bodega-grupo-5</h4>
                                 <p>Planificación y estimación del desarrollo de la página Web.
