subo cambios en el código

--- a/index.html
+++ b/index.html
@@ -460,15 +460,18 @@
                                 <li>HTML</li>
                                 <li>CSS</li>
                                 <li>JavaScript</li>
+
+                                <li>GitHub</li>
+                                <li>Metodologias Agiles</li>
                                 <li>React</li>
                                 <li>Node Js</li>
                                 <li>Express</li>
                                 <li>Git</li>
                                 <li>MySQL</li>
-                                <li> APIs.</li>
+                                <li>APIs.</li>
                                 <li>Python</li>
-                                <li> Flask</li>
-                                <li> Django</li>
+                                <li>Flask</li>
+                                <li>Django</li>
                             </ul>
 
                         </div>
@@ -508,7 +511,7 @@
                         <button onclick="window.history.back()" class="btn btn-primary"><a
                                 href="/images/JuanCarlosFedyna.pdf" <button class="enlace-descarga" download>Descargar
                                 cv</a></button>
-                        <p>Derechos reservados &copy; 2024</p>
+                        <p>Derechos reservados &copy; Juan Carlos Fedyna 2024</p>
                     </footer>
                 </div>
                 <!--Fin componente tarjeta n 3-->
@@ -629,15 +632,18 @@
                                 <li>HTML</li>
                                 <li>CSS</li>
                                 <li>JavaScript</li>
+                                <li>Git</li>
+                                <li>GitHub</li>
+                                <li>Metodologias Agiles</li>
                                 <li>React</li>
                                 <li>Node Js</li>
                                 <li>Express</li>
-                                <li>Git</li>
+
                                 <li>MySQL</li>
-                                <li> APIs.</li>
+                                <li>APIs.</li>
                                 <li>Python</li>
-                                <li> Flask</li>
-                                <li> Django</li>
+                                <li>Flask</li>
+                                <li>Django</li>
                             </ul>
 
                         </div>
