--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>Juan Carlos Paco Fedyna </title>
+
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
         <style>
@@ -599,6 +600,7 @@
                                 interpersonales.
                                 Siempre tengo la mejor disposición
                                 para nuevos desafios.
+                                También me gustan los desafios complejos.
                             </p>
                         </div>
                     </div>
